--- a/07.Actual-Publishing-Example/Sound-Player/style.css
+++ b/07.Actual-Publishing-Example/Sound-Player/style.css
@@ -1,11 +1,11 @@
 /* Google Web Font */
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500&display=swap");
 
 /* Fontawesome 4.7 */
-@import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
 * {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -26,7 +26,12 @@ a {
   text-decoration: none;
   color: #222;
 }
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: normal;
   margin: 0;
 }
@@ -61,6 +66,7 @@ h1,h2,h3,h4,h5,h6 {
   height: 100%;
   background-color: yellowgreen;
   margin-right: 2px;
+  transition: 0.5s;
 }
 .audio-status.active span:nth-child(1) {
   animation-delay: 0s;
@@ -89,7 +95,3 @@ h1,h2,h3,h4,h5,h6 {
     height: 20%;
   }
 }
-
-
-
-
